--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
-  text-align: center;
+html, body, #root, .main{
+  min-height: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main .nav-bar{
+  background-color: green;
+  padding: 15px 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-list{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.nav-list .nav-item{
+  padding: 10px;
+  margin-right: 20px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
+.nav-list .nav-item:hover{
+  color: green;
+  background-color: white;
+}
+
+.open-drawer{
+  display: none;
+}
+.nav-item.current{
+  color: green;
+  background-color: white;
+}
+.add-textarea::-webkit-scrollbar { width: 0 !important }
+.add-textarea{ overflow: -moz-scrollbars-none; }
+.add-textarea{ -ms-overflow-style: none; }
+img{
+  max-height: 130px;
+  width: auto;
+  max-width: 90%;
+}
+.remove-scroll-bars{
+  overflow: -moz-scrollbars-none;
+  -ms-overflow-style: none;
+}
+.remove-scroll-bars::-webkit-scrollbar { width: 0 !important }
+@media (max-width: 500px) {
+  .main .nav-bar{
+    justify-content: space-between;
+    position: fixed;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    width: 100%;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+  .mobile{
+    padding-top: 66px;
+  }
+  .nav-list{
+    display: none;
+  }
+
+  .open-drawer{
+    display: block;
+  }
+  .reverse{
+    flex-direction: row-reverse;
+  }
+}
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  z-index: 1;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid green;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: green transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
 }
